<resources>
    <string name="app_name">Kadbyte Client</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_description">With Kadbyte Manage your business from anywhere at anytime</string>
    <string name="kadbyte">KadByte</string>
    <string name="manage">Manage</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="files">Files</string>
    <string name="home">Home</string>
    <string name="items">Items</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="savePlusNew">Save + New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
