<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingRight="32dp"
    android:paddingLeft="32dp"
    android:paddingBottom="32dp"
    android:paddingTop="24dp"
    tools:context=".ui.activities.WelcomeActivity">

    <TextView
        android:id="@+id/WelcomeAppNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kadbyte"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintTop_toTopOf="@id/WelcomeAppNameView"
        app:layout_constraintBottom_toBottomOf="@id/WelcomeAppNameView"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/WelcomeDescriptionView"
        />
    <TextView
        android:id="@+id/WelcomeDescriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/WelcomeLoginButton"/>

    <Button
        android:id="@+id/WelcomeLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/bg_soild_round_white"
        android:onClick="buttonClick"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/WelcomeSignUpButton" />

    <Button
        android:id="@+id/WelcomeSignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/bg_stroke_round_white"
        android:onClick="buttonClick"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>