<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/orderListFragment">
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.kadbyte.client.OrderListFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_order_list" />
    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.kadbyte.client.ui.fragments.ItemListFragment"
        android:label="@string/items">
        <action
            android:id="@+id/action_itemListFragment_to_itemAddFragment"
            app:destination="@id/itemAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/itemAddFragment"
        android:name="com.kadbyte.client.ui.fragments.ItemAddFragment"
        android:label="Create Item"
        tools:layout="@layout/fragment_item_add" >
        <action
            android:id="@+id/action_itemAddFragment_to_addVendorDialog"
            app:destination="@id/addVendorDialog" />
    </fragment>
    <fragment
        android:id="@+id/categoryListFragment"
        android:name="com.kadbyte.client.ui.fragments.CategoryListFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category_list">
        <action
            android:id="@+id/action_categoryListFragment_to_addCategoryDialog"
            app:destination="@id/addCategoryDialog" />
    </fragment>
    <dialog
        android:id="@+id/addCategoryDialog"
        android:name="com.kadbyte.client.ui.dialogs.AddCategoryDialog"
        android:label="AddCategoryDialog" />
    <dialog
        android:id="@+id/addVendorDialog"
        android:name="com.kadbyte.client.ui.dialogs.AddVendorDialog"
        android:label="AddVendorDialog" />
    <fragment
        android:id="@+id/createBarcodeFragment"
        android:name="com.kadbyte.client.CreateBarcodeFragment"
        android:label="fragment_create_barcode"
        tools:layout="@layout/fragment_create_barcode" />
</navigation>