<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageButton
        android:id="@+id/AddPhotoGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/gallery"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/AddPhotoCameraButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/kdblue"
        app:layout_constraintLeft_toLeftOf="@id/AddPhotoGalleryButton"
        app:layout_constraintRight_toRightOf="@id/AddPhotoGalleryButton"
        app:layout_constraintTop_toBottomOf="@id/AddPhotoGalleryButton" />

    <ImageButton
        android:id="@+id/AddPhotoCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_filled_blue"
        android:contentDescription="@string/camera"
        android:padding="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/AddPhotoGalleryButton"
        app:layout_constraintRight_toLeftOf="@id/AddPhotoFileButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/AddPhotoFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/files"
        android:src="@drawable/ic_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/AddPhotoCameraButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files"
        android:textColor="@color/kdblue"
        app:layout_constraintLeft_toLeftOf="@id/AddPhotoFileButton"
        app:layout_constraintRight_toRightOf="@id/AddPhotoFileButton"
        app:layout_constraintTop_toBottomOf="@id/AddPhotoFileButton" />

</androidx.constraintlayout.widget.ConstraintLayout>