<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingRight="32dp"
    android:paddingLeft="32dp"
    android:paddingTop="24dp"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kadbyte"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintTop_toTopOf="@id/login_name"
        app:layout_constraintBottom_toBottomOf="@id/login_name"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:textColorHint="#929292"
        android:textColor="#ffffff"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/login_password_input"
        app:layout_constraintTop_toBottomOf="@id/login_name"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textColorHint="#929292"
        android:textColor="#ffffff"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/login_username_input"
        app:layout_constraintBottom_toTopOf="@id/login_signin_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/login_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toTopOf="@id/login_signupButton"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/login_signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@null"
        android:textColor="#929292"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/login_forgotButton"
        />
    <Button
        android:id="@+id/login_forgotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:background="@null"
        android:textColor="#929292"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/login_signupButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>